# calculatorCLI

./: LICENSE  README.md  calculadorcli.py  pyproject.toml  requirements.txt
