[tool.poetry]
name = "calculatorcli"
version = "0.1.0"
description = "Basic calculator cli."
authors = ["Vinicius Barbosa de Aguiar <vb9763662@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.4.0"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
